# wordcount

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  text.txt
src/: lib.rs  main.rs
