[package]
name = "wordcount"
version = "0.1.0"
authors = ["coro <hacorolab@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "シンプルな文字、単語、行の出現頻度計測機能を提供します。"
readme = "README.md"
repository = "https://github.com/hacolab/wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]

[badges]
appveyor = { repository = "hacolab/wordcount" }
travis-ci = { repository = "hacolab/wordcount" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"

